Patch for TB 68
I made a hacked version (notes below) you can find at:
http://www.tnrglobal.com/2020/05/thunderbird-addons/
Hack issues:
1) It does require TB restart although it doesn't report that.
2) I've mainly used search and Ctl-Shift FIELD for searching,
SO please try your favorite options and let me know if it works.
3) I don't have access to add better update info
4) FYI, This is a legacy mode extension

I call it hacked because I not a extension pro, even if I am a Kernel level professional programmer.
good luck. It is not in any way compromised as many use hacked to mean.
If I get github access I will make a branch for this.

fixes #80

--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,17 @@
       "strict_max_version": "68.9"
     }
   },
-  "version": "1.4beta",
+  "version": "1.4.2",
   "manifest_version": 2,
   "name": "Expression Search / Google Mail UI",
   "description": "Type 'from:fred to:tom' to see all messages from Fred to Tom in the current view.",
-  "author": "Opera Wang",
+  "author": "Opera Wang V68 by Rich Roth - http://www.tnrglobal.com/2020/05/thunderbird-addons/",
   "homepage_url": "https://github.com/wangvisual/expression-search",
   "legacy": {
     "type": "bootstrap",
     "options": {
       "page": "chrome://expressionsearch/content/esPrefDialog.xul",
-      "open_in_tab": false
+      "open_in_tab": true
     }
   },
   "icons": {
