--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
 
     }
   },
-  "version": "2.4beta",
+  "version": "2.5beta",
   "manifest_version": 2,
-  "name": "Expression Search / Google Mail UI NG (for TB 78)",
+  "name": "Expression Search / Google Mail UI- NG (for TB 78+)",
   "description": "Type 'from:fred to:tom' to see all messages from Fred to Tom in the current view.",
   "author": "Klaus Buecher, Opera Wang",
   "homepage_url": "https://github.com/opto/expression-search-NG",
