Expression Search NG v 3.4.2 for TB 102
The addon has been updated for TB 102 and is at ATN for review.

--- a/manifest.json
+++ b/manifest.json
@@ -3,47 +3,82 @@
     "gecko": {
       "id": "expressionsearch@opto.one",
       "strict_min_version": "91.0",
-      "strict_max_version": "91.*"
-
+      "strict_max_version": "104.0"
     }
   },
-  "version": "3.1",
+  "version": "3.4.2",
   "manifest_version": 2,
   "name": "Expression Search - NG",
   "description": "Type 'from:fred to:tom' or 'f:fred t:tom' to see all messages from Fred to Tom in the current view.",
   "author": "Klaus Buecher, Opera Wang, Ken Mixter",
+   "default_locale": "en-US",
   "homepage_url": "https://github.com/opto/expression-search-NG",
-  
   "icons": {
-    "32": "icon.png",
-    "48": "icon.png",
-    "64": "icon.png"
+    "32": "skin/icon.png",
+    "48": "skin/icon.png",
+    "64": "skin/icon.png"
   },
-
   "background": {
     "scripts": [
+      "scripts/tools.js",
       "ex-background.js"
     ]
   },
-
+  "options_ui": {
+    "page": "html/esPrefDialog.html",
+    "open_in_tab": true
+  },
+  "permissions": [
+    "accountsRead"
+  ],
   "experiment_apis": {
-    "BootstrapLoader": {
-      "schema": "api/BootstrapLoader/schema.json",
+    "ExpressionSearch": {
+      "schema": "api/ExpressionSearch/schema.json",
       "parent": {
-        "scopes": ["addon_parent"],
-        "paths": [["BootstrapLoader"]],
-        "script": "api/BootstrapLoader/implementation.js"
+        "scopes": [
+          "addon_parent"
+        ],
+        "paths": [
+          [
+            "ExpressionSearch"
+          ]
+        ],
+        "script": "api/ExpressionSearch/implementation.js",
+        "events": [
+          "startup"
+        ]
       }
     },
-		"Utilities": {
-		  "schema": "api/Utilities/schema.json",
-		  "parent": {
-			"scopes": ["addon_parent"],
-			"paths": [["Utilities"]],
-			"script": "api/Utilities/implementation.js"
-		  
-		   }
-		}
-
-  }  
+    "LegacyPrefs": {
+      "schema": "api/LegacyPrefs/schema.json",
+      "parent": {
+        "scopes": [
+          "addon_parent"
+        ],
+        "paths": [
+          [
+            "LegacyPrefs"
+          ]
+        ],
+        "script": "api/LegacyPrefs/implementation.js"
+      }
+    },
+    "NotifyTools": {
+      "schema": "api/NotifyTools/schema.json",
+      "parent": {
+        "scopes": [
+          "addon_parent"
+        ],
+        "paths": [
+          [
+            "NotifyTools"
+          ]
+        ],
+        "script": "api/NotifyTools/implementation.js",
+        "events": [
+          "startup"
+        ]
+      }
+    }
+  }
 }
